編集 index.haml side-bar(2019.8.2)
・アイコン間隔を微調整

--- a/app/assets/stylesheets/_side-ber.scss
+++ b/app/assets/stylesheets/_side-ber.scss
@@ -20,6 +20,16 @@
       }
       &__menu{
         float: right;
+        a{
+          color:#fff;
+        }
+        ul{
+          li{
+            float:left;
+            margin: 0px 2px;
+    
+          }
+        }
       }
     }
   }
