--- a/app/views/messages/index.haml
+++ b/app/views/messages/index.haml
@@ -7,8 +7,13 @@
           %p
           yasuna
         .side__header__box__menu
-          = fa_icon "edit"
-          = fa_icon "cog"
+          %ul
+            %li.side__header__box__menu__edit
+              =link_to "/", class: "side__header__box__menu__btn" do
+                = fa_icon "edit"
+            %li.side__header__box__menu__cog
+              =link_to "/", class: "side__header__box__menu__btn" do
+                = fa_icon "cog"
     .side__group
       .side__group__box
         %p.side__group__box__title
