--- a/app/views/messages/index.haml
+++ b/app/views/messages/index.haml
@@ -1,5 +1,4 @@
 .body
-    
   .side
     .side__header
       .side__header__box
@@ -24,16 +23,50 @@
         %p.side__group__box__title
           sample*
         %p.side__group__box__info
-          See you
+          test
 
 
       
 
 
-.contents
+  .contents
 
-  .contents__header
--# 固定
+    .contents__header
+      .contents__header__group
+        %p.contents__header__group__title
+          sample*
+      
+      .contents__header__btn
+        %p.contents__header__btn__edit
+          Edit
+      .contents__header__members
+        %p.contents__header__members__name
+          Members：yasuna
 
-  .contents__message-box
--# 固定
+    .contents__message
+      .contents__message__box
+        %p.contents__message__box__user
+          yasuna
+        %p.contents__message__box__created-at
+          2019/07/24(Wed) 20:10:53
+      %p.contents__message__text  
+        test
+
+      .contents__message__box
+        %p.contents__message__box__user
+          yasuna
+        %p.contents__message__box__created-at
+          2019/07/24(Wed) 22:22:22
+      %p.contents__message__text  
+        hello
+
+    .contents__form
+      .contents__form__box
+        %textarea.contents__form__box__message
+          type a message
+        %label.upload-label{for: "upload-icon"}
+          %i.fa.fa-picture-o
+            %input{type: "file", id: "upload-icon"}
+      .contents__form__send
+        %input{type: "submit", value: "Send"}
+
