--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "./body";
-@import "./side-ber";
+@import "./side";
 @import "./contents";
+@import "./variables";
 @import "font-awesome";
 
