追加　_variables.scss
・変数追加
・インデント修正

--- a/app/assets/stylesheets/_side-bar.scss
+++ b/app/assets/stylesheets/_side-bar.scss
@@ -1,20 +1,20 @@
-.side{
-  background-color: #2f3e51;
-  color: #fff;
-  font-weight: bold;
+@import "./variables";
+
+.side-bar{
+  color: $side-font-color;
   width: 300px;
   float: left;
-  overflow: hidden;
 
-  &__header{
-    background-color: #253141;
+  .header{
+    background-color: $side-heder-color;
     height: 100px;
     width: 260px;
     padding: 0 20px;
     align-items: center;
+    font-weight: bold;
     display: flex;
     &__box{
-      width:100%;
+      width: 100%;
       &__user-name{
         float: left;
         font-size: 16px;
@@ -22,20 +22,20 @@
       &__menu{
         float: right;
         a{
-          color:#fff;
+          color: $side-font-color;
         }
         ul{
           li{
-            float:left;
+            float: left;
             margin: 0px 2px;
-    
           }
         }
       }
     }
   }
 
-  &__group{
+  .group{
+    background-color: $side-group-color;
     padding: 20px 20px 0px 20px;
     height: calc(100vh - 100px);
     overflow-y: scroll;
