--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "./reset";
 @import "./body";
-@import "./side";
+@import "./side-bar";
 @import "./contents";
 @import "./variables";
 @import "font-awesome";
