--- a/app/assets/stylesheets/_contents.scss
+++ b/app/assets/stylesheets/_contents.scss
@@ -1,35 +1,35 @@
+@import "./variables";
+
 .contents{
   width: calc(100vw - 300px);
   float: left;
-  
 
-  &__header{
+  .header{
     background-color: #fff;
     padding: 0 40px;
     height: 100px;
     border: solid 1px #eeeeee;
     position: relative;
-  
     &__group{
-      padding-top:35px;
-      float:left;
+      padding-top: 35px;
+      float: left;
       p{
         color: #333333;
-        font-size:20px;
+        font-size: 20px;
       }
     }
     &__btn{
-      border: solid 1px #38aef0;
+      border: solid 1px $btn-color;
       float: right;
       margin: 28px 0px;
-      padding:0 20px;
+      padding: 0 20px;
+      cursor: pointer;
       p{
         font-size: 16px;
         line-height: 40px;
-        color: #38aef0;
+        color: $btn-color;
       }
     }
-
     &__members{
     	position: absolute;
       bottom: 0;
@@ -40,19 +40,17 @@
       }
     }
   }
-
-  &__message{
+  .message{
     background-color: #fafafa;
     height: calc(100vh - 200px);
     padding: 46px 40px;
     overflow-y: scroll;
     box-sizing: border-box;
-
     &__box{
-      margin-bottom:10px;
+      margin-bottom: 10px;
       &__user{
         font-size: 16px;
-        color: #434a54;
+        color: $message-text-color;
         margin-right: 10px;
         float: left;
         font-weight: bold;
@@ -62,31 +60,30 @@
         color: #999999;
       }
     }
-
     &__text{
-      font-size:14px;
-      color: #434a54;
+      font-size: 14px;
+      color: $message-text-color;
       margin-bottom: 40px;
     }
   }
 
-  &__form{
+  .form{
     background-color: #dddddd;
     height: 100px;
     padding: 25px 40px;
     box-sizing: border-box;
     &__box{
-      width:100%;
+      width: 100%;
       &__message{
         position: relative;
         width: calc(100% - 150px);
         textarea{
-          padding:0 10px;
-          height:50px;
+          padding: 0 10px;
+          height: 50px;
           width: 100%;
           border: none;
-          font-size:16px;
-          color: #434a54;
+          font-size: 16px;
+          color: $message-text-color;
           line-height: 50px;
           float: left;
         }
@@ -104,7 +101,7 @@
       &__send{
         &__btn{
           border: none;
-          background-color: #38aef0;;
+          background-color: $btn-color;;
           color: #fff;
           height: 50px;
           width: 100px;
