--- a/app/assets/stylesheets/_contents.scss
+++ b/app/assets/stylesheets/_contents.scss
@@ -66,6 +66,10 @@
       margin-bottom: 40px;
     }
   }
+  
+  .message::-webkit-scrollbar {
+    display: none;
+  }
 
   .form{
     background-color: #dddddd;
