--- a/app/views/messages/index.haml
+++ b/app/views/messages/index.haml
@@ -106,7 +106,7 @@
     .form
       .form__box
         .form__box__message
-          %textarea{placeholder: "type a message", class: "form__box__message__text"}
+          %input{placeholder: "type a message", class: "form__box__message__text"}
             
           %label.upload-label{for: "upload-icon"}
             %i.fa.fa-picture-o
