追加　sign-up ~ flash
・アカウント登録
・アカウント編集
・side-barにアカウント情報追加
・フラッシュ機能追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "./reset";
 @import "./variables";
 @import "font-awesome";
+@import "./flach";
 @import "./body";
 @import "./side-bar";
 @import "./user.scss";
