テンプレート切り出し
・index.html.haml内のsideber部分とcontents部分をテンプレートとして切り出し、ファイルを分けた

--- a/app/views/messages/index.haml
+++ b/app/views/messages/index.haml
@@ -1,117 +1,3 @@
 .body
-  .side-bar
-    .header
-      .header__box
-        .header__box__user-name
-          %p
-          =current_user.name
-        .header__box__menu
-          %ul
-            %li.header__box__menu__edit
-              =link_to "/", class: "header__box__menu__btn" do
-                = fa_icon "edit"
-            %li.header__box__menu__cog
-              = link_to edit_user_path(current_user) do
-                = fa_icon 'cog', class: 'icon'
-
-    .group
-      .group__box
-        %p.group__box__title
-          sample
-        %p.group__box__info
-          Good by world
-      .group__box  
-        %p.group__box__title
-          sample*
-        %p.group__box__info
-          まだメッセージがありません
-      .group__box
-        %p.group__box__title
-          sample*
-        %p.group__box__info
-          まだメッセージがありません
-      .group__box
-        %p.group__box__title
-          sample*
-        %p.group__box__info
-          まだメッセージがありません
-      .group__box
-        %p.group__box__title
-          sample*
-        %p.group__box__info
-          まだメッセージがありません 
-      .group__box
-        %p.group__box__title
-          sample*
-        %p.group__box__info
-          まだメッセージがありません  
-      .group__box
-        %p.group__box__title
-          sample*
-        %p.group__box__info
-          まだメッセージがありません           
-  .contents
-    .header
-      .header__group
-        %p.header__group__title
-          sample     
-      .header__btn
-        %p.header__btn__edit
-          Edit
-      .header__members
-        %p.header__members__name
-          Members：yasuna
-    .message
-      .message__box
-        %p.message__box__user
-          yasuna
-        %p.message__box__created-at
-          2019/07/24(Wed) 20:10:53
-      %p.message__text  
-        test
-      .message__box
-        %p.message__box__user
-          yasuna
-        %p.message__box__created-at
-          2019/07/24(Wed) 22:22:22
-      %p.message__text  
-        hello
-      .message__box
-        %p.message__box__user
-          yasuna
-        %p.message__box__created-at
-          2019/07/24(Wed) 22:22:22
-      %p.message__text  
-        hello
-      .message__box
-        %p.message__box__user
-          yasuna
-        %p.message__box__created-at
-          2019/07/24(Wed) 22:22:22
-      %p.message__text  
-        hello
-      .message__box
-        %p.message__box__user
-          yasuna
-        %p.message__box__created-at
-          2019/07/24(Wed) 22:22:22
-      %p.message__text  
-        hello
-      .message__box
-        %p.message__box__user
-          yasuna
-        %p.message__box__created-at
-          2019/07/24(Wed) 23:59:18
-      %p.message__text  
-        Good by world
-    .form
-      .form__box
-        .form__box__message
-          %input{placeholder: "type a message", class: "form__box__message__text"}
-            
-          %label.upload-label{for: "upload-icon"}
-            %i.fa.fa-picture-o
-              %input{type: "file", id: "upload-icon"}
-        .form__box__send
-          %input{type: "submit", value: "Send", class: "form__box__send__btn"}
-
+  = render "layouts/sideber"
+  = render "contents"
