追加 group作成・編集画面
・追加　groups/edit.html.haml
・追加　groups/new.html.haml
・追加　group.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "font-awesome";
 @import "./flach";
 @import "./body";
+@import "./group";
 @import "./side-bar";
 @import "./user.scss";
 @import "./contents";
