--- a/app/views/layouts/_sideber.html.haml
+++ b/app/views/layouts/_sideber.html.haml
@@ -7,7 +7,7 @@
       .header__box__menu
         %ul
           %li.header__box__menu__edit
-            =link_to "/", class: "header__box__menu__btn" do
+            =link_to new_group_path, class: "header__box__menu__btn" do
               = fa_icon "edit"
           %li.header__box__menu__cog
             = link_to edit_user_path(current_user) do
