--- a/app/views/layouts/_sideber.html.haml
+++ b/app/views/layouts/_sideber.html.haml
@@ -15,7 +15,7 @@
   .group
     - current_user.groups.each do |group|
       .group__box
-        = link_to "/" do
+        = link_to group_messages_path(group) do
           %p.group__box__title
             = group.name
           %p.group__box__info
