--- a/app/views/messages/_contents.html.haml
+++ b/app/views/messages/_contents.html.haml
@@ -4,8 +4,9 @@
       %p.header__group__title
         sample     
     .header__btn
-      %p.header__btn__edit
-        Edit
+      = link_to edit_group_path(@group) do
+        %p.header__btn__edit
+          Edit
     .header__members
       %p.header__members__name
         Members：yasuna
@@ -53,7 +54,7 @@
     %p.message__text  
       Good by world
   .form
-    = form_for @message, :url => { :controller => :messages, :action => :create } do |f|
+    = form_for @message, url: group_messages_path do |f|
       .form__box
         .form__box__message
           = f.text_field :text, class: "form__box__message__text", placeholder: "type a message"            
