追加 message~テスト

--- a/app/views/layouts/_sideber.html.haml
+++ b/app/views/layouts/_sideber.html.haml
@@ -19,4 +19,4 @@
           %p.group__box__title
             = group.name
           %p.group__box__info
-            Good by world
+            = group.show_last_message
