非同期通信化

--- a/app/views/messages/_contents.html.haml
+++ b/app/views/messages/_contents.html.haml
@@ -1,3 +1,6 @@
+-# :javascript 
+-#   $('.message').animate({scrollTop: $('.message')[0].scrollHeight}, 'slow');
+
 .contents
   .header
     .header__group
