--- a/app/assets/stylesheets/_contents.scss
+++ b/app/assets/stylesheets/_contents.scss
@@ -47,7 +47,7 @@
     padding: 46px 40px;
     overflow-y: scroll;
     box-sizing: border-box;
-    &__box{
+    &__top{
       margin-bottom: 10px;
       &__user{
         font-size: 16px;
@@ -61,15 +61,24 @@
         color: #999999;
       }
     }
-    &__text{
+    &__bottom{
+      margin-bottom: 40px;
+      &__text{
       font-size: 14px;
       color: $message-text-color;
-      margin-bottom: 40px;
+      }
+      &__image{
+      }
     }
   }
 
   .message::-webkit-scrollbar {
     display: none;
+  }
+
+  #new-message{
+    background-color: red;
+    
   }
 
   .form{
