編集 users_contoroller.rb

--- a/app/views/messages/_contents.html.haml
+++ b/app/views/messages/_contents.html.haml
@@ -14,7 +14,7 @@
       %p.header__members__name
         Members：
         - @group.users.each do |group_name|
-          = group_name.name + ","
+          = group_name.name + "  "
   .message
     = render @messages
 
