--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -22,7 +22,15 @@
       %label.chat-group-form__label{for:"chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
       #user-add-list
-      
+        - group.users.each do |user|
+          .chat-group-user
+            %input{name: "group[user_ids][]", type: "hidden", value: "#{user.id}"}
+            %p.chat-group-user__name
+              = user.name
+            .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+              削除
+
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
