自動更新実装

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message__box
+.message__box(data-message-id='#{message.id}')
   .message__top
     %p.message__top__user
       = message.user.name
